--- a/website.css
+++ b/website.css
@@ -2,7 +2,7 @@
 p{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     line-height: 1.5;
-    text-align: justify;
+  
 }
 h1{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -20,14 +20,14 @@ body {
 
 
 header {
-    /* margin-top: 5px; */
     background-color: #4CAF50; /* Green color for the header */
     padding: 20px;
     text-align: center;
     color: #fff;
     width: 100%;
-    margin: 0;
 
+    margin: 0;
+    
     position: relative;
     top: 60px; /* Add top margin to account for fixed navbar */
 }
@@ -115,8 +115,9 @@ nav ul li a:hover {
 
 /* Responsive adjustments */
 @media (max-width: 768px) {
-    nav ul {
-        flex-direction: column; /* Stack the nav links on smaller screens */
+   
+    .Container {
+        grid-template-columns: 1fr;
     }
 }
 
@@ -150,7 +151,8 @@ nav ul li a:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     font-size: 18px; /* Slightly larger text */
     height: 400px; /* Set a specific height */
-    margin: 0;
+    
+    margin: 0 auto;
     width: 100%;
 }
 .about-us-section h2 {
@@ -187,6 +189,8 @@ nav ul li a:hover {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     height: 300px; /* Ensure Mission and Vision boxes have the same height */
 
+    width: 100%;
+    margin: 0 auto;
 
 }
 
@@ -271,23 +275,16 @@ nav ul li a:hover {
     position: relative; /* Positioning for the confirmation message */
 }
 
-.contactimg1{
-    height: 326px;
-    width: 309px;
-    float: right;
-    position: relative;
-    right: 56px;
-   
-}
+
 
 #contact-info h2 {
     text-align: center;
     color: #4CAF50;
-    margin: 68px 0px 0px 232px;
+    margin: 66px 0px 0px 53px;
 }
 
 #contact-info p{
-    margin: 22px 0px 26px 281px;
+    margin: 22px 0px 26px 8px;
 }
 
 
@@ -531,12 +528,14 @@ button:hover {
     font-size: 2em;
     margin: 11px 0px 27px 477px;
     color: #333;
+    
 }
 
 .story-section p {
     font-size: 1.1em;
     color: #555;
     margin: 0px 0px 43px 477px;
+    
 }
 
 .btn-share-story {
